index.css
body {
	font-family:'Source Code Pro', monospace;
	background-color: #2b303b;
	color: #c0c5ce;
	padding:1em;
	font-size:16px;
}
a {
	color: #ebcb8b;
	text-decoration: none;
}

#vvv_logo {
	white-space: pre;
}

.container-installing,
.container-success {
  display:none;
}

.current-screen-installing > .container-installing,
.current-screen-success > .container-success {
  display: block;
}

.container-success {
  text-align: center;
}

.container-success svg {
  max-width:200px;
}

.button {
  display:inline-block;
  border: 1px solid #c0c5ce;
  color: #c0c5ce;
  border-radius: 5px;
  padding: 1em 2em;
}

.button:hover {
  border-color: #eff1f5;
  color: #eff1f5;
  background: #343d46;
}

strong { color: #eff1f5; }
.v1 { color: rgb( 246, 60, 37 ); }
.v2 { color: rgb( 130, 255, 27 ); }
.v3 { color: rgb( 76, 155, 250 ); }
.v4 { color: rgb( 255, 224, 27 ); }

.progress-bar-container {
	width:400px;
	border: 1px solid #ebcb8b;
	border-radius:5px;
	padding:5px;
}

.progress-bar {
	border-radius:5px;
	height:24px;
	background: #ebcb8b;
	color: #2b303b;
	transition: width 1s;
}

.progress-message {
	color: #ebcb8b;
}


.spinner {
  width: 20px;
  height: 20px;

  position: relative;
  margin: 0 1em 1em 0;
  float:left;
}

.double-bounce1, .double-bounce2 {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: #ebcb8b;
  opacity: 0.6;
  position: absolute;
  top: 0;
  left: 0;
  
  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
  animation: sk-bounce 2.0s infinite ease-in-out;
}

.double-bounce2 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

@-webkit-keyframes sk-bounce {
  0%, 100% { -webkit-transform: scale(0.0) }
  50% { -webkit-transform: scale(1.0) }
}

@keyframes sk-bounce {
  0%, 100% { 
    transform: scale(0.0);
    -webkit-transform: scale(0.0);
  } 50% { 
    transform: scale(1.0);
    -webkit-transform: scale(1.0);
  }
}
/* ... */

